--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-dom": "18.2.4",
     "aes-js": "^3.1.2",
     "autoprefixer": "10.4.14",
+    "bufferutil": "^4.0.7",
+    "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "ethers": "^5.7.2",
@@ -34,6 +36,7 @@
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "utf-8-validate": "^5.0.10",
     "web3": "^4.1.1"
   },
   "devDependencies": {
